CSS: make main scrollable to avoid having elements behind the footer

--- a/app/assets/stylesheets/_common.scss
+++ b/app/assets/stylesheets/_common.scss
@@ -150,6 +150,7 @@ label {
 
 main {
   display: flex;
+  overflow-y: auto;
 }
 
 footer {
